--- a/EX2+3/app/src/main/res/layout/activity_main.xml
+++ b/EX2+3/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp">
+
         <TextView
             android:id="@+id/tvMath"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#FAD2D2"
             android:gravity="right|center_vertical"
             android:minHeight="48dp"
-        android:text="0"
-        android:textSize="24sp"/>
+            android:text="0"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/tvResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#FBD3D3"
             android:gravity="right|center_vertical"
             android:minHeight="48dp"
             android:text="0"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
     </LinearLayout>
 
