--- a/EX4/app/src/main/res/values/style.xml
+++ b/EX4/app/src/main/res/values/style.xml
@@ -15,4 +15,8 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:typeface">monospace</item>
     </style>
+    <style name="button">
+        <item name="android:background">@color/purple_200</item>
+    </style>
+
 </resources>
