--- a/EX5/app/src/main/res/layout/activity_calc1.xml
+++ b/EX5/app/src/main/res/layout/activity_calc1.xml
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="420dp"
-            android:text="MOL"
+            android:text="MUL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.275"
             app:layout_constraintStart_toStartOf="parent"
