--- a/EX9/app/src/main/res/layout/activity_main.xml
+++ b/EX9/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -16,6 +17,7 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <TextView
         android:id="@+id/tvShow"
         android:layout_width="wrap_content"
@@ -24,26 +26,28 @@
         android:textSize="30sp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="50dp"/>
-    5
+
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/anh1"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
         android:layout_marginBottom="10dp"/>
+
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
         android:layout_marginBottom="10dp"/>
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
         android:layout_marginBottom="10dp"/>
